WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
180460
[Mac] REGRESSION (
r224527
): Drawing a path with box-shadow takes double the blur-radius on Retina display
https://bugs.webkit.org/show_bug.cgi?id=180460
Summary
[Mac] REGRESSION (r224527): Drawing a path with box-shadow takes double the b...
Said Abou-Hallawa
Reported
2017-12-05 17:07:23 PST
Created
attachment 328528
[details]
test case Open the attached test case on High Sierra MacOS Retina display. Result: the box-shadow of the rounded rectangle does not render correctly. It looks as if the blur-radius is doubled (See the attached picture which compares the correct display and the wrong display).
Attachments
test case
(261 bytes, text/html)
2017-12-05 17:07 PST
,
Said Abou-Hallawa
no flags
Details
screen shot
(115.81 KB, image/png)
2017-12-05 17:07 PST
,
Said Abou-Hallawa
no flags
Details
Patch
(1.46 KB, patch)
2017-12-05 17:18 PST
,
Said Abou-Hallawa
no flags
Details
Formatted Diff
Diff
Patch
(1.49 KB, patch)
2017-12-06 09:16 PST
,
Said Abou-Hallawa
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Said Abou-Hallawa
Comment 1
2017-12-05 17:07:41 PST
Created
attachment 328529
[details]
screen shot
Said Abou-Hallawa
Comment 2
2017-12-05 17:18:08 PST
Created
attachment 328535
[details]
Patch
Radar WebKit Bug Importer
Comment 3
2017-12-05 17:20:30 PST
<
rdar://problem/35869866
>
Daniel Bates
Comment 4
2017-12-05 23:37:57 PST
Please update the title in the ChangeLog before landing. I added a space character between “REGRESSION” and ‘(‘. Please also add the radar bug URL under the Buzilla bug URLin the ChangeLog.
Said Abou-Hallawa
Comment 5
2017-12-06 09:16:35 PST
Created
attachment 328577
[details]
Patch
WebKit Commit Bot
Comment 6
2017-12-06 09:31:40 PST
Comment on
attachment 328577
[details]
Patch Clearing flags on attachment: 328577 Committed
r225575
: <
https://trac.webkit.org/changeset/225575
>
WebKit Commit Bot
Comment 7
2017-12-06 09:31:41 PST
All reviewed patches have been landed. Closing bug.
Simon Fraser (smfr)
Comment 8
2017-12-06 10:08:20 PST
Comment on
attachment 328577
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=328577&action=review
> Source/WebCore/ChangeLog:10 > + Disable using CGContextDrawPathDirect() for macOS High Sierra or earlier. > + This API has a bug when drawing a path with a shadow on Retina display.
You should reference the underlying radar.
Said Abou-Hallawa
Comment 9
2017-12-06 11:57:11 PST
Comment on
attachment 328577
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=328577&action=review
>> Source/WebCore/ChangeLog:10 >> + This API has a bug when drawing a path with a shadow on Retina display. > > You should reference the underlying radar.
Done. <
https://trac.webkit.org/changeset/225586
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug