[Mac] REGRESSION (r224527): Drawing a path with box-shadow takes double the blur-radius on Retina display https://bugs.webkit.org/show_bug.cgi?id=180460 <rdar://problem/35869866>

Patch by Said Abou-Hallawa <sabouhallawa@apple.com> on 2017-12-06
Reviewed by Daniel Bates.

Disable using CGContextDrawPathDirect() for macOS High Sierra or earlier.
This API has a bug when drawing a path with a shadow on Retina display.

* platform/graphics/cg/GraphicsContextCG.cpp:

Canonical link: https://commits.webkit.org/196403@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@225575 268f45cc-cd09-0410-ab3c-d52691b4dbfc